crates/glyim-test/src/snapshot/snapshots/glyim_test__snapshot__snapshot_cst@pub_super_struct.snap
---
source: crates/glyim-test/src/snapshot/mod.rs
assertion_line: 16
expression: tree
---
SourceFile@0..18
  Visibility@0..10
    KwPub@0..3 "pub"
    LParen@3..4 "("
    VisSuper@4..9
      KwSuper@4..9 "super"
    RParen@9..10 ")"
  StructDef@10..18
    KwStruct@10..16 "struct"
    Ident@16..17 "S"
    Semicolon@17..18 ";"
