crates/glyim-test/src/snapshot/snapshots/glyim_test__snapshot__snapshot_cst@range_pattern_inclusive.snap
---
source: crates/glyim-test/src/snapshot/mod.rs
expression: tree
---
SourceFile@0..27
  FnDef@0..27
    KwFn@0..2 "fn"
    Ident@2..6 "main"
    LParen@6..7 "("
    ParamList@7..7
    RParen@7..8 ")"
    Block@8..27
      LBrace@8..9 "{"
      ExprStmt@9..26
        MatchExpr@9..26
          KwMatch@9..14 "match"
          PathExpr@14..15
            UsePath@14..15
              Ident@14..15 "x"
          LBrace@15..16 "{"
          MatchArmList@16..25
            MatchArm@16..25
              PatLit@16..21
                PatRange@16..21
                  IntLit@16..17 "0"
                  DotDotEq@17..20 "..="
                  IntLit@20..21 "9"
              FatArrow@21..23 "=>"
              Block@23..25
                LBrace@23..24 "{"
                RBrace@24..25 "}"
          RBrace@25..26 "}"
      RBrace@26..27 "}"
