crates/glyim-test/src/snapshot/snapshots/glyim_test__snapshot__snapshot_cst@slice_pattern.snap
---
source: crates/glyim-test/src/snapshot/mod.rs
expression: tree
---
SourceFile@0..34
  FnDef@0..34
    KwFn@0..2 "fn"
    Ident@2..6 "main"
    LParen@6..7 "("
    ParamList@7..7
    RParen@7..8 ")"
    Block@8..34
      LBrace@8..9 "{"
      ExprStmt@9..33
        MatchExpr@9..33
          KwMatch@9..14 "match"
          PathExpr@14..17
            UsePath@14..17
              Ident@14..17 "arr"
          LBrace@17..18 "{"
          MatchArmList@18..32
            MatchArm@18..32
              PatSlice@18..28
                LBracket@18..19 "["
                PatIdent@19..20
                  Ident@19..20 "a"
                Comma@20..21 ","
                PatIdent@21..22
                  Ident@21..22 "b"
                Comma@22..23 ","
                DotDot@23..25 ".."
                Comma@25..26 ","
                PatIdent@26..27
                  Ident@26..27 "c"
                RBracket@27..28 "]"
              FatArrow@28..30 "=>"
              Block@30..32
                LBrace@30..31 "{"
                RBrace@31..32 "}"
          RBrace@32..33 "}"
      RBrace@33..34 "}"
