crates/glyim-test/src/snapshot/snapshots/glyim_test__snapshot__snapshot_cst@where_lifetime_bound.snap
---
source: crates/glyim-test/src/snapshot/mod.rs
assertion_line: 18
expression: tree
---
SourceFile@0..24
  FnDef@0..24
    KwFn@0..2 "fn"
    Ident@2..5 "qux"
    TypeParamList@5..11
      Lt@5..6 "<"
      TypeParam@6..8
        Lifetime@6..8 "'a"
      Comma@8..9 ","
      TypeParam@9..10
        Ident@9..10 "T"
      Gt@10..11 ">"
    LParen@11..12 "("
    RParen@12..13 ")"
    WhereClause@13..22
      KwWhere@13..18 "where"
      WherePredicate@18..22
        PathType@18..19
          UsePath@18..19
            Ident@18..19 "T"
        Colon@19..20 ":"
        Bound@20..22
          Lifetime@20..22 "'a"
    Block@22..24
      LBrace@22..23 "{"
      RBrace@23..24 "}"
