crates/glyim-test/src/snapshot/snapshots/glyim_test__snapshot__snapshot_cst@where_multiple_bounds.snap
---
source: crates/glyim-test/src/snapshot/mod.rs
assertion_line: 18
expression: tree
---
SourceFile@0..34
  FnDef@0..34
    KwFn@0..2 "fn"
    Ident@2..5 "bar"
    TypeParamList@5..8
      Lt@5..6 "<"
      TypeParam@6..7
        Ident@6..7 "T"
      Gt@7..8 ">"
    LParen@8..9 "("
    RParen@9..10 ")"
    WhereClause@10..32
      KwWhere@10..15 "where"
      WherePredicate@15..32
        PathType@15..16
          UsePath@15..16
            Ident@15..16 "T"
        Colon@16..17 ":"
        Bound@17..22
          PathType@17..22
            UsePath@17..22
              Ident@17..22 "Clone"
        Plus@22..23 "+"
        Bound@23..27
          PathType@23..27
            UsePath@23..27
              Ident@23..27 "Send"
        Plus@27..28 "+"
        Bound@28..32
          PathType@28..32
            UsePath@28..32
              Ident@28..32 "Sync"
    Block@32..34
      LBrace@32..33 "{"
      RBrace@33..34 "}"
