crates/glyim-test/src/snapshot/snapshots/glyim_test__snapshot__snapshot_cst@where_single_bound.snap
---
source: crates/glyim-test/src/snapshot/mod.rs
assertion_line: 18
expression: tree
---
SourceFile@0..24
  FnDef@0..24
    KwFn@0..2 "fn"
    Ident@2..5 "foo"
    TypeParamList@5..8
      Lt@5..6 "<"
      TypeParam@6..7
        Ident@6..7 "T"
      Gt@7..8 ">"
    LParen@8..9 "("
    RParen@9..10 ")"
    WhereClause@10..22
      KwWhere@10..15 "where"
      WherePredicate@15..22
        PathType@15..16
          UsePath@15..16
            Ident@15..16 "T"
        Colon@16..17 ":"
        Bound@17..22
          PathType@17..22
            UsePath@17..22
              Ident@17..22 "Clone"
    Block@22..24
      LBrace@22..23 "{"
      RBrace@23..24 "}"
